# shorty

./: main.py  pyproject.toml  requirements.txt
shorty/: api.py  app.py  utils.py  validators.py
shorty/swagger_config/: shortify_specs.yml
tests/: test_shorty.py
tests/status_code_tests/: test_status_code.py
tests/values_tests/: test_values.py
